log
Thu 09 May 2024 05:42:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
6da4d7f
Thu 09 May 2024 07:29:41 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b58a15c
Thu 09 May 2024 07:34:53 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:14: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |   TreeNode * parent = NULL;
      |              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
bc5d426
Thu 09 May 2024 07:43:56 PM UTC: 
 treemap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  5|7
total_score: 5/70
0e85fde
Thu 09 May 2024 07:55:12 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
124b64b
